Added update operation in Board and other visual changes

--- a/src/Anonco/Anonco.csproj
+++ b/src/Anonco/Anonco.csproj
@@ -193,10 +193,11 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\errors.css" />
+    <Content Include="Content\styles.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -261,6 +262,7 @@
     <Content Include="Views\Board\Details.cshtml" />
     <Content Include="Views\Board\Delete.cshtml" />
     <Content Include="Views\Board\Create.cshtml" />
+    <Content Include="Views\Board\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
