--- a/src/Anonco.Logic/Anonco.Logic.csproj
+++ b/src/Anonco.Logic/Anonco.Logic.csproj
@@ -64,7 +64,11 @@
     <Compile Include="IoC\LogicModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Abstract\IAnnouncementRepository.cs" />
+    <Compile Include="Repositories\Abstract\ICategoryRepository.cs" />
+    <Compile Include="Repositories\Abstract\IUserRepository.cs" />
     <Compile Include="Repositories\Concrete\AnnouncementRepository.cs" />
+    <Compile Include="Repositories\Concrete\CategoryRepository.cs" />
+    <Compile Include="Repositories\Concrete\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
